<resources>
    <string name="app_name">TFG TBD</string>
    <!-- Strings related to navigation drawer -->
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_messages">Chat</string>
    <string name="title_search">Search</string>

    <!-- Strings related to login -->
    <string name="prompt_email">email</string>
    <string name="prompt_password">password</string>
    <string name="prompt_username">username</string>
    <string name="action_sign_up">New?</string>
    <string name="action_login">Login</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >8 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="login_success">Login success</string>
    <string name="artist">Creator</string>
    <string name="user">User</string>
    <string name="login">Login</string>
    <string name="enter_no_login">I\'m just looking</string>
    <string name="enter">Enter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>